--- a/hoxton/zh-cn/index.html
+++ b/hoxton/zh-cn/index.html
@@ -4510,10 +4510,9 @@ Sidecar当网关在使用，经过了一层转发，性能有一定下降。</p>
 </div>
 </div>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
-<link rel="stylesheet" href="js/tocbot/tocbot.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script src="js/tocbot/tocbot.min.js"></script>
-<script src="js/toc.js"></script>
+<script src="js/tocbot.js"></script>
 <script>hljs.initHighlighting()</script>
 </body>
 </html>
