--- a/hoxton/zh-cn/nacos-config.html
+++ b/hoxton/zh-cn/nacos-config.html
@@ -853,6 +853,8 @@ spring.cloud.nacos.config.refreshable-dataids=bootstrap-common.properties</code>
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
