--- a/hoxton/zh-cn/oss.html
+++ b/hoxton/zh-cn/oss.html
@@ -297,6 +297,8 @@ spring.cloud.alicloud.oss.config.max-connections=1000</code></pre>
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
