--- a/hoxton/zh-cn/rocketmq.html
+++ b/hoxton/zh-cn/rocketmq.html
@@ -698,6 +698,8 @@ topic 和 group 请以 实例id% 为前缀进行配置。比如 topic 为 "test"
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
