--- a/hoxton/zh-cn/introduction.html
+++ b/hoxton/zh-cn/introduction.html
@@ -148,6 +148,8 @@ $(addBlockSwitches);
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
