--- a/hoxton/zh-cn/schedulerx.html
+++ b/hoxton/zh-cn/schedulerx.html
@@ -268,6 +268,8 @@ group-id必须创建在namespace当中。
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
