--- a/hoxton/zh-cn/sidecar.html
+++ b/hoxton/zh-cn/sidecar.html
@@ -411,6 +411,8 @@ Sidecar当网关在使用，经过了一层转发，性能有一定下降。</p>
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
