--- a/hoxton/zh-cn/sms.html
+++ b/hoxton/zh-cn/sms.html
@@ -427,6 +427,8 @@ public class SmsUpMessageListener
 </div>
 </div>
 </div>
+<script type="text/javascript" src="js/tocbot/tocbot.min.js"></script>
+<script type="text/javascript" src="js/tocbot.js"></script>
 <link rel="stylesheet" href="js/highlight/styles/atom-one-dark-reasonable.min.css">
 <script src="js/highlight/highlight.min.js"></script>
 <script>hljs.initHighlighting()</script>
