--- a/hoxton/zh-cn/index.html
+++ b/hoxton/zh-cn/index.html
@@ -350,7 +350,7 @@ $(addBlockSwitches);
         &lt;dependency&gt;
             &lt;groupId&gt;com.alibaba.cloud&lt;/groupId&gt;
             &lt;artifactId&gt;spring-cloud-alibaba-dependencies&lt;/artifactId&gt;
-            &lt;version&gt;2.1.1.BUILD-SNAPSHOT&lt;/version&gt;
+            &lt;version&gt;2.2.7.RELEASE&lt;/version&gt;
             &lt;type&gt;pom&lt;/type&gt;
             &lt;scope&gt;import&lt;/scope&gt;
         &lt;/dependency&gt;
