docs: fix docs error

--- a/hoxton/zh-cn/index.html
+++ b/hoxton/zh-cn/index.html
@@ -680,7 +680,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_如何使用appactive">14.2. 如何使用AppActive</a>
 <ul class="sectlevel3">
-<li><a href="#_一数据面">14.2.1. 一、数据面</a></li>
+<li><a href="#_数据面">14.2.1. 数据面</a></li>
 </ul>
 </li>
 </ul>
@@ -5643,7 +5643,7 @@ Sidecar当网关在使用，经过了一层转发，性能有一定下降。</p>
 <div class="sect2">
 <h3 id="_如何使用appactive">14.2. 如何使用AppActive</h3>
 <div class="sect3">
-<h4 id="_一数据面">14.2.1. 一、数据面</h4>
+<h4 id="_数据面">14.2.1. 数据面</h4>
 <div class="paragraph">
 <p><strong>前置条件</strong></p>
 </div>
