--- a/hoxton/2.2.10-RC1/zh-cn/index.html
+++ b/hoxton/2.2.10-RC1/zh-cn/index.html
@@ -5431,7 +5431,7 @@ spring.cloud.appactive.filter.general-path=/*</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Microservices Governance是Spring Cloud Alibaba最新推出的微服务治理能力，提供了多种类型的微服务治理能力，包括标签路由，服务鉴权等。并且对接了多种控制面，比如Istio，OpenSergo，让用户无需改造Spring Cloud应用，也能实时感知到上述治理控制面下发的治理规则，并将此规则应用到Spring Cloud应用上，从而完成对Spring Cloud应用的治理。</p>
+<p>Spring Cloud Alibaba Governance是Spring Cloud Alibaba最新推出的微服务治理能力，提供了多种类型的微服务治理能力，包括标签路由，服务鉴权等。并且对接了多种控制面，比如 <a href="https://istio.io/">Istio</a>，http://opensergo.io/[OpenSergo]，让用户仅通过添加特定的Adapter模块，就能实时感知到上述治理控制面下发的治理规则，并将此规则作用到应用上，从而完成对应用的治理。</p>
 </div>
 <div class="sect2">
 <h3 id="_配置转换">14.1. 配置转换</h3>
@@ -5441,10 +5441,10 @@ spring.cloud.appactive.filter.general-path=/*</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Microservices Governance的配置转换模块会将不同控制面下发的配置进行统一的转换，目前支持将来自Istio，OpenSergo等控制面下发的配置统一转换为Spring Cloud Alibaba统一抽象出的数据结构以供后续使用</p>
+<p>Microservices Governance的规则转换模块会将不同控制面下发的规则进行统一的转换，目前支持将来自Istio，OpenSergo等控制面下发的规则统一转换为Spring Cloud Alibaba统一抽象出的数据结构以供后续使用</p>
 </div>
 <div class="paragraph">
-<p>如果在项目中使用Istio来实现规则转换，需要使用如下starter依赖：</p>
+<p>如果在项目中使用Istio来实现规则转换，首先注意需要搭建一个Kubernetes集群，并且在其中部署Istio，具体参考 <a href="https://istio.io/latest/zh/docs/setup/install">Istio安装</a>。然后在需要接收到来自Istio规则的应用（一般为服务消费者）中添加如下starter依赖：</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -5455,10 +5455,10 @@ spring.cloud.appactive.filter.general-path=/*</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>OpenSergo请参考https://github.com/alibaba/spring-cloud-alibaba/tree/2.2.x/spring-cloud-alibaba-examples/governance-example/label-routing-example[Spring Cloud Alibaba Routing Examples]</p>
+<p>OpenSergo请参考 <a href="https://github.com/alibaba/spring-cloud-alibaba/tree/2.2.x/spring-cloud-alibaba-examples/governance-example/label-routing-example">Spring Cloud Alibaba Routing Examples</a></p>
 </div>
 <div class="paragraph">
-<p>之后，在application.yml配置文件中配置如下配置</p>
+<p>之后，在application.yml配置文件中设置如下配置内容：</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -5591,10 +5591,10 @@ spring:
 <div class="sect3">
 <h4 id="_使用路由">14.2.2. 使用路由</h4>
 <div class="paragraph">
-<p>在引入配置转换模块后，就能获取到相应的治理规则来对应用赋予相应的治理能力。标签路由模块可以实现对应用根据请求头，请求参数等标签来路由到不同的服务</p>
+<p>在引入配置转换模块后，就能获取到相应的治理规则来对应用赋予相应的治理能力。标签路由模块可以实现对应用根据请求头，请求参数等标签来路由到不同的服务，</p>
 </div>
 <div class="paragraph">
-<p>1.如果在项目中使用Spring Cloud Alibaba 标签路由，需要使用添加如下starter</p>
+<p>1.如果在项目中使用Spring Cloud Alibaba 标签路由，需要添加如下starter（一般添加在服务消费者应用上）</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -5614,7 +5614,7 @@ spring:
 </div>
 </div>
 <div class="paragraph">
-<p>在引入Istio配置转换模块的前提下，标签路由模块支持对以下几种请求的元信息做路由</p>
+<p>在引入Istio配置转换模块的前提下，标签路由模块支持对以下几种请求的元信息做路由：</p>
 </div>
 <div class="ulist">
 <ul>
@@ -5630,7 +5630,7 @@ spring:
 </ul>
 </div>
 <div class="paragraph">
-<p>使用Istio下发对应的 <code>DestinationRule</code> 以及 <code>VirtualService</code> ，即可配置对应的标签路由规则，具体的配置方法请参考以下文档与示例</p>
+<p>使用Istio下发对应的 <code>DestinationRule</code> 以及 <code>VirtualService</code> ，即可配置对应的标签路由规则，具体的配置方法请参考以下文档与示例：</p>
 </div>
 <div class="ulist">
 <ul>
@@ -5655,7 +5655,7 @@ spring:
 </div>
 </div>
 <div class="paragraph">
-<p>在引入配置转换模块后，我们就能获取到相应的治理规则来对Spring Cloud应用赋予相应的治理能力。服务鉴权模块给Spring Cloud应用提供多种鉴权方式，如IP黑白名单，JWT鉴权等</p>
+<p>在引入规则转换Adapter后，就能获取到相应的治理规则来对应用赋予相应的治理能力。服务鉴权模块给应用提供多种鉴权方式，如IP黑白名单，JWT鉴权等</p>
 </div>
 <div class="paragraph">
 <p>如果使用Spring Cloud Alibaba服务鉴权功能，需要使用添加如下依赖：</p>
@@ -5690,7 +5690,7 @@ spring:
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-12 12:14:48 +0800
+Last updated 2023-01-12 20:55:50 +0800
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
